--- a/install_python.yml
+++ b/install_python.yml
@@ -2,12 +2,12 @@
   gather_facts: true
   tasks:
 
-  - name: Check for Python
-      raw: test -e /usr/bin/python
-      changed_when: false
-      failed_when: false
-      register: check_python
-
- - name: Install Python
-      raw: apt install python3.8
-      when: check_python.rc != 0
+  - name: Install apache httpd  (state=present is optional)
+    ansible.builtin.apt:
+      name: apache2
+      state: present
+  
+  - name: Install Python
+    ansible.builtin.apt:
+      name: python
+      state: present
