--- a/restart.yml
+++ b/restart.yml
@@ -1,14 +1,12 @@
----
 - hosts: ansibleuser
+  become: yes
   tasks:
-  - name: start nginx
-    service:
-      name: nginx
-      state: started
+  - name: "apt-get update"
+    apt:
+      update_cache: yes
+      cache_valid_time: 3600
 
-  - name: restart nginx
-    service:
-      name: nginx
-      state: stopped
-    become: true
-    become_method: sudo
+  - name: "install nginx"
+    apt:
+      name: ['nginx']
+      state: latest
