--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -6,7 +6,7 @@
   tasks:
   - name: Install MySQL
     apt: 
-      name: ['python-mysqldb'] 
+      name: ['python3-mysqldb'] 
       update_cache: yes 
       cache_valid_time: 3600 
       state: present
