--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -34,7 +34,7 @@
       check_implicit_admin: yes
       priv: "*.*:ALL,GRANT"
     with_items:
-      - "{{ ansible_hostname }}"
+      - ansibleuser
       - 127.0.0.1
       - ::1
       - localhost 
