--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -27,14 +27,9 @@
   - name: update mysql root password for all root accounts
     mysql_user: 
       name: root 
-      host: "{{ item }}" 
-      password: "{{ mysql_root_password }}"
+      host: "ansibleuser" 
+      password: "pass"
       login_user: root
-      login_password: "{{ mysql_root_password }}"
+      login_password: "pass"
       check_implicit_admin: yes
       priv: "*.*:ALL,GRANT"
-    with_items:
-      - ansibleuser
-      - 127.0.0.1
-      - ::1
-      - localhost 
