--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -18,6 +18,13 @@
       cache_valid_time: 3600 
       state: present
 
+  - name: Install PyMySQL
+    apt: 
+      name: ['PyMySQL'] 
+      update_cache: yes 
+      cache_valid_time: 3600 
+      state: present
+
   - name: Start the MySQL service
     service: 
       name: mysql 
