--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -19,10 +19,8 @@
       state: present
 
   - name: Install PyMySQL
-    apt: 
-      name: ['PyMySQL'] 
-      update_cache: yes 
-      cache_valid_time: 3600 
+    pip: 
+      name: ['pymysql'] 
       state: present
 
   - name: Start the MySQL service
