--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -33,9 +33,14 @@
   - name: update mysql root password for all root accounts
     mysql_user: 
       name: root 
-      host: "ansibleuser" 
-      password: "pass"
+      host: "{{ item }}" 
+      password: "{{ mysql_root_password }}"
       login_user: root
-      login_password: "pass"
+      login_password: "{{ mysql_root_password }}"
       check_implicit_admin: yes
       priv: "*.*:ALL,GRANT"
+    with_items:
+      - ansibleuser
+      - 127.0.0.1
+      - ::1
+      - localhost 
