--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -31,16 +31,10 @@
       enabled: true
 
   - name: update mysql root password for all root accounts
-    mysql_user: 
-      name: root 
-      host: "{{ item }}" 
-      password: "{{ mysql_root_password }}"
-      login_user: root
-      login_password: "{{ mysql_root_password }}"
-      check_implicit_admin: yes
-      priv: "*.*:ALL,GRANT"
-    with_items:
-      - ansibleuser
-      - 127.0.0.1
-      - ::1
-      - localhost 
+    mysql_user:
+      login_host: 'localhost'
+      login_user: 'root'
+      login_password: ''
+      name: 'root'
+      password: '{{ mysql_root_password }}'
+      state: present
