--- a/install_mysql.yml
+++ b/install_mysql.yml
@@ -30,11 +30,18 @@
       state: started
       enabled: true
 
+  - name: Create database user with name 'bob' and password '12345' with all database privileges
+    community.mysql.mysql_user:
+      name: bob
+      password: 12345
+      priv: '*.*:ALL'
+      state: present
+
   - name: update mysql root password for all root accounts
     mysql_user:
       login_host: 'localhost'
       login_user: 'root'
-      login_password: ''
+      login_password: 'omkar'
       name: 'root'
       password: '{{ mysql_root_password }}'
       state: present
